# askfaro-progressive-context

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
askfaro_progressive_context/: __init__.py  cli.py  eval.py  llm.py  loader.py  runtime.py  session.py  types.py  validate.py
docs/: troubleshooting.md
examples/skills/: cases.json  manifest.pcx.4k.json
faro_progressive_context/: __init__.py  cli.py  llm.py  navigator.py  runtime.py  tokenizer.py  types.py  validate.py
legacy-shim/: README.md  pyproject.toml
legacy-shim/faro_progressive_context/: __init__.py
schema/: pcx-0.1.schema.json  pcx-0.2.schema.json
tests/: conftest.py  test_adapters.py  test_budget_meta.py  test_build.py  test_cli_gates.py  test_distinct.py  test_eval.py  test_fidelity.py  test_format_v2.py  test_incremental.py  test_lint.py  test_loader.py  test_memory_presets.py  test_runtime.py  test_session.py  test_synthesis.py  test_validate.py  test_views.py
tests/fixtures/: tools.json
tests/fixtures/docs/guide/: getting-started.md
tests/fixtures/docs/reference/: cli.md
tests/fixtures/memory/: likes-tea.md  ship-on-fridays.md
tests/fixtures/skills/: draft-post.md  schedule-post.md  web-research.md
