[project]
name = "askfaro-progressive-context"
version = "0.5.1"
description = "Compile any content into a tiered, budget-aware, agent-navigable progressive-disclosure manifest, plus an on-demand expansion protocol — for small/on-device context windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faro" }]
keywords = ["llm", "context", "progressive-disclosure", "on-device", "agent", "llms-txt", "tokens", "context-window"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.scripts]
pcx = "askfaro_progressive_context.cli:main"

[project.urls]
Homepage = "https://github.com/poolside-ventures/askfaro-progressive-context"
Repository = "https://github.com/poolside-ventures/askfaro-progressive-context"
Issues = "https://github.com/poolside-ventures/askfaro-progressive-context/issues"
Changelog = "https://github.com/poolside-ventures/askfaro-progressive-context/blob/main/CHANGELOG.md"

[project.optional-dependencies]
schema = ["jsonschema>=4.21"]
llm = ["httpx>=0.27"]
tokenize = ["tiktoken>=0.7"]
yaml = ["pyyaml>=6"]
dev = ["pytest>=8", "pyyaml>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["askfaro_progressive_context"]

[tool.hatch.build.targets.wheel.force-include]
"schema/pcx-0.2.schema.json" = "askfaro_progressive_context/schema/pcx-0.2.schema.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
