[project]
# Final release of the OLD distribution name. It contains no real code: it just
# depends on the renamed package and re-exports it (see the shim __init__).
# Renamed to askfaro-progressive-context as of 0.1.0.
name = "faro-progressive-context"
version = "0.0.8"
description = "Deprecated: renamed to askfaro-progressive-context. This is a compatibility shim that re-exports it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Faro" }]
classifiers = [
    "Development Status :: 7 - Inactive",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["askfaro-progressive-context>=0.1.0"]

[project.scripts]
pcx = "askfaro_progressive_context.cli:main"

[project.urls]
Homepage = "https://github.com/poolside-ventures/askfaro-progressive-context"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["faro_progressive_context"]
